# tico-swanstation

./: CMakeLists.txt  README.md  build_swanstation_nro.sh
dep/: CMakeLists.txt
dep/glad/src/: glad.c
dep/imgui/backends/: imgui_impl_opengl3.cpp
dep/libretro-common/glsym/: glsym_gl.c
dep/stb/src/: stb_image.c
dep/vixl/: CMakeLists.txt
dep/vixl/include/vixl/: assembler-base-vixl.h  code-buffer-vixl.h  code-generation-scopes-vixl.h  compiler-intrinsics-vixl.h  cpu-features.h  globals-vixl.h  invalset-vixl.h  macro-assembler-interface.h  platform-vixl.h  pool-manager-impl.h  pool-manager.h  utils-vixl.h
dep/vixl/include/vixl/aarch32/: assembler-aarch32.h  constants-aarch32.h  disasm-aarch32.h  instructions-aarch32.h  location-aarch32.h  macro-assembler-aarch32.h  operands-aarch32.h
dep/vixl/include/vixl/aarch64/: abi-aarch64.h  assembler-aarch64.h  constants-aarch64.h  cpu-aarch64.h  cpu-features-auditor-aarch64.h  decoder-aarch64.h  disasm-aarch64.h  instructions-aarch64.h  instrument-aarch64.h  macro-assembler-aarch64.h  operands-aarch64.h  simulator-aarch64.h  simulator-constants-aarch64.h
dep/vixl/src/: code-buffer-vixl.cc  compiler-intrinsics-vixl.cc  cpu-features.cc  utils-vixl.cc
dep/vixl/src/aarch32/: assembler-aarch32.cc  constants-aarch32.cc  disasm-aarch32.cc  instructions-aarch32.cc  location-aarch32.cc  macro-assembler-aarch32.cc  operands-aarch32.cc
dep/vixl/src/aarch64/: assembler-aarch64.cc  cpu-aarch64.cc  cpu-features-auditor-aarch64.cc  decoder-aarch64.cc  disasm-aarch64.cc  instructions-aarch64.cc  instrument-aarch64.cc  logic-aarch64.cc  macro-assembler-aarch64.cc  operands-aarch64.cc  pointer-auth-aarch64.cc  simulator-aarch64.cc
src/common/: CMakeLists.txt  event.cpp  event.h  file_system.cpp  jit_code_buffer.cpp  jit_code_buffer.h  memory_arena.cpp  memory_arena.h  page_fault_handler.cpp  timer.cpp
src/core/: CMakeLists.txt  analog_controller.cpp  bus.h  cpu_code_cache.cpp  cpu_code_cache.h  cpu_recompiler_code_generator_aarch32.cpp  cpu_recompiler_code_generator_aarch64.cpp  cpu_recompiler_types.h  system.cpp
src/libretro/: CMakeLists.txt  libretro_host_interface.cpp
tico/: TicoAudio.h  TicoConfig.h  TicoCore.cpp  TicoCore.h  TicoLogger.h  TicoMain.cpp  TicoOverlay.cpp  TicoOverlay.h  TicoStubs.cpp  TicoTranslationManager.cpp  TicoTranslationManager.h  TicoUtils.h  glad.c  glad.h
tico/lang/: en.json  es.json  fr.json  ja.json  pt.json  zh.json
